--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+.container {
+  min-height: 90vh;
+}
+
+.container .footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 .App {
   text-align: center;
 }
